<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context="com.example.bhavika.milkwala.view.activity.login.LoginActivity">
    
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/splash_logo"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/layoutContainer">

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/editTextEmail"
            android:gravity="center"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:background="@drawable/selector_edittext"
            android:hint="@string/email"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/editTextEmail"
            android:id="@+id/editTextPassword"
            android:gravity="center"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:background="@drawable/selector_edittext"
            android:hint="@string/password"
            android:layout_height="wrap_content" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/layoutForgotPasswordContainer"
           android:orientation="horizontal"
           android:weightSum="2"
           android:layout_below="@+id/editTextPassword"
           android:layout_marginTop="15dp">
           
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="14dp"
               android:layout_weight="1"
               android:textStyle="bold"
               android:text="@string/forgot_password"
               android:textColor="@color/colorAccent"/>

           <TextView
               android:textStyle="bold"
               android:textColor="@color/colorAccent"
               android:id="@+id/textViewForgotPassword"
               android:layout_width="wrap_content"
               android:gravity="right"
               android:layout_weight="1"
               android:textSize="14dp"
               android:text="@string/click_here"
               android:layout_height="wrap_content" />


       </LinearLayout>

        <Button
            android:layout_marginTop="30dp"
            android:layout_below="@id/layoutForgotPasswordContainer"
            android:id="@+id/buttonLogin"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:background="@drawable/selector_button"
            android:text="@string/signinnow"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

        <TextView
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:id="@+id/textViewRegister"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_below="@+id/buttonLogin"
            android:textSize="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/don_t_have_an_account_please_register"
            android:layout_height="wrap_content" />


    </RelativeLayout>

</RelativeLayout>
